# skui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: buildqt.yml  clang-format.yml
docs/: devmanuel.md  usermanuel.md
libs/: icons.qrc
src/: CMakeLists.txt  assets.qrc  document.cpp  document.h  interfacehandler.cpp  interfacehandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  outbound.cpp  outbound.h  panel.cpp  panel.h  resizeboundingbox.cpp  resizeboundingbox.h  skui.cpp  skuievent.h  viewport.cpp  viewport.h  visual.cpp  visual.h
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  skui.h
src/assets/: icons.qrc
src/assets/breeze_icons/: breezeicons.cpp  breezeicons.h
src/nodeeditor/: CMakeLists.txt  node.h  node_graphicsitem.cpp  node_graphicsitem.h  nodeeditor_scence.cpp  nodeeditor_scence.h  nodeeditor_viewport.cpp  nodeeditor_viewport.h
src/panel/: CMakeLists.txt  panel.cpp  panel.h  visual.h
src/panel/visuals/: slider.h  test.cpp  test.h
src/visuals/: slider.cpp  test.cpp  test.h
